--- a/base/templates/base/product.html
+++ b/base/templates/base/product.html
@@ -15,6 +15,7 @@
          </div>
       </section>
       <!-- end inner page section -->
+
       <!-- product section -->
       <section class="product_section layout_padding">
          <div class="container">
@@ -37,7 +38,7 @@
                         </div>
                      </div>
                      <div class="img-box">
-                        <img src="images/p1.png" alt="">
+                        <img src="{% static 'images/p1.png' %}" alt="">
                      </div>
                      <div class="detail-box">
                         <h5>
@@ -62,7 +63,7 @@
                         </div>
                      </div>
                      <div class="img-box">
-                        <img src="images/p2.png" alt="">
+                        <img src="{% static 'images/p2.png' %}" alt="">
                      </div>
                      <div class="detail-box">
                         <h5>
