--- a/base/templates/base/product.html
+++ b/base/templates/base/product.html
@@ -31,12 +31,7 @@
                   <div class="box">
                      <div class="option_container">
                         <div class="options">
-                           <a href="" class="option1">
-                           Add To Cart
-                           </a>
-                           <a href="" class="option2">
-                           Buy Now
-                           </a>
+                           <button data-product="{{product.id}}" data-action="add" class="btn option1 update-cart">Add To Cart</button>
                         </div>
                      </div>
                      <div class="img-box">
