--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -23,7 +23,28 @@
       <!-- responsive style -->
       <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 
-      <script type="text/javascript"> var user = '{{request.user}}' </script>
+      <script type="text/javascript">
+
+         var user = '{{request.user}}'
+
+         function getCsrfToken(name) {
+             var cookieValue = null;
+             if (document.cookie && document.cookie !== '') {
+                 var cookies = document.cookie.split(';');
+                 for (var i = 0; i < cookies.length; i++) {
+                     var cookie = cookies[i].trim();
+                     // Does this cookie string begin with the name we want?
+                     if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                         cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                         break;
+                     }
+                 }
+             }
+             return cookieValue;
+         }
+         var csrftoken = getCsrfToken('csrftoken');
+
+      </script>
    </head>
    <body>
       <div class="hero_area">
@@ -101,7 +122,7 @@
                                  <g>
                                  </g>
                                  <g>
-                                 </g>
+                                 </g><span class="badge badge-secondary m-1">{{cartItems}}</span>
                               </svg>
                            </a>
                         </li>
