--- a/base/templates/base/checkout.html
+++ b/base/templates/base/checkout.html
@@ -165,7 +165,33 @@
             userFormData.name = form.name.value
             userFormData.email = form.email.value
         }
+
+        /*url to send the data of productId and action*/
+        var url = '/process_order/'
+
+        /*api to use to send data*/
+        fetch(url, {
+            method: 'POST',
+            headers:{
+                'Content-Type':'application/json',
+                'Accept': 'application/json',
+                'X-CSRFToken':csrftoken,
+            },
+            body: JSON.stringify({'form': userFormData, 'shipping': shippingFormData})
+        })
+
+        /*after the fetch is complete, return data*/
+        .then((response) => {
+            return response.json()
+        })
+
+        .then((data) => {
+            console.log('Success:',data);
+            alert('Transaction complete');
+            window.location.href = "{% url 'product' %}"
+        })
     }
+
 
 </script>
 
