--- a/base/templates/base/checkout.html
+++ b/base/templates/base/checkout.html
@@ -28,10 +28,10 @@
                         <div id="user-info">
                             <div class="row">
                                 <div class="col">
-                                    <input type="text" class="form-control" name="name" placeholder="Name">
+                                    <input type="text" class="form-control" name="name" placeholder="Name" required>
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control" name="email" placeholder="Email">
+                                    <input type="text" class="form-control" name="email" placeholder="Email" required>
                                 </div>
                             </div>
                         </div>
@@ -42,13 +42,12 @@
                             <hr>
                             <div class="row">
                                 <div class="col">
-                                    <input type="text" class="form-control m-1" name="address" placeholder="Address">
-                                    <input type="text" class="form-control m-1" name="state" placeholder="State">
-                                    <input type="text" class="form-control m-1" name="zipcode" placeholder="Zip code">
+                                    <input type="text" class="form-control m-1" name="address" placeholder="Address" required>
+                                    <input type="text" class="form-control m-1" name="state" placeholder="State" required>
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control m-1" name="city" placeholder="City">
-                                    <input type="text" class="form-control m-1" placeholder="Zip code">
+                                    <input type="text" class="form-control m-1" name="city" placeholder="City" required>
+                                    <input type="text" class="form-control m-1" name="zipcode" placeholder="Zip code" required>
                                 </div>
                             </div>
                         </div>
