--- a/base/templates/base/checkout.html
+++ b/base/templates/base/checkout.html
@@ -62,7 +62,9 @@
 
             <div class="row" id="payment-info" style="display:none;">
                 <div class="col m-2">
-                    <p>Paypal</p><button type="submit" class="btn btn-secondary" id="payment-button">pay now</button>
+                    <p>Payment Options</p>
+                    <hr>
+                    <button type="submit" class="btn btn-secondary" id="payment-button">pay now</button>
                 </div>
             </div>
         </div>
